Fix background image moving bug
* Set html and body tags to 100% height to ensure bg image is fully stretched

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,7 @@
+html, body {
+    height: 100%;
+}
+
 body {
     background-image: url('../img/AIbrain.jpg');
     background-repeat: no-repeat;
