--- a/assets/css/info.css
+++ b/assets/css/info.css
@@ -1,3 +1,7 @@
+html, body {
+    height: 100%;
+}
+
 body {
     font-family: "Open Sans", Helvetica, Arial, sans-serif;
     font-weight: 300;
